--- a/index.html
+++ b/index.html
@@ -24,17 +24,27 @@
       scroll-behavior: smooth;
     }
 
+    main { overflow-x: hidden; }
+
+    /* Ultra-light section animation */
     section {
       padding: 2.4rem 1.25rem;
-      opacity: 1 !important;
-      transform: none !important;
+      opacity: 0;
+      transform: translateY(14px);
+      transition: opacity .35s ease-out, transform .35s ease-out;
+    }
+
+    section.visible {
+      opacity: 1;
+      transform: translateY(0);
     }
 
     @media (min-width: 768px) {
       section { padding: 4rem 1.5rem; }
     }
 
-    h1 { font-size: 2.2rem; font-weight: 700; margin-bottom: .7rem; }
+    /* Typography */
+    h1 { font-size: 2.2rem; font-weight: 700; letter-spacing: -0.02em; margin-bottom: .7rem; }
     h2 { font-size: 1.65rem; font-weight: 700; margin-bottom: .5rem; }
     h3 { font-size: 1.28rem; font-weight: 600; }
 
@@ -61,6 +71,8 @@
       text-align: center;
       padding-top: 3.2rem;
       padding-bottom: 3.6rem;
+      opacity: 1 !important;
+      transform: none !important;
     }
 
     .hero img {
@@ -86,9 +98,10 @@
       cursor: pointer;
       display: inline-block;
       margin-top: 1.1rem;
-      transition: background .25s;
+      transition: background .25s, transform .15s;
     }
-    .cta:hover { background: #aac7da; }
+    .cta:hover { background: #aac7da; transform: translateY(-1px); }
+    .cta:active { transform: translateY(0); }
 
     /* CO TO JEST */
     .features {
@@ -111,7 +124,12 @@
       box-shadow: 0 2px 8px rgba(0,0,0,0.04);
     }
 
+    @media (min-width: 768px) {
+      .feature { padding: 1.6rem 1.6rem; box-shadow: 0 6px 18px rgba(0,0,0,0.04); }
+    }
+
     .feature span { font-size: 2rem; }
+    .feature div { max-width: 480px; }
 
     /* JAK TO DZIAŁA */
     .columns-3 {
@@ -122,7 +140,10 @@
     }
 
     @media (min-width: 720px) {
-      .columns-3 { grid-template-columns: repeat(3, 1fr); gap: 1.5rem; }
+      .columns-3 {
+        grid-template-columns: repeat(3, 1fr);
+        gap: 1.5rem;
+      }
     }
 
     .card {
@@ -135,7 +156,8 @@
     }
 
     @media (min-width: 768px) {
-      .card { padding: 1.8rem 1.2rem; }
+      .card { padding: 1.8rem 1.2rem; box-shadow: 0 8px 24px rgba(0,0,0,0.05); }
+      .card:hover { transform: translateY(-3px); }
     }
 
     /* PRODUKTY */
@@ -149,7 +171,10 @@
     }
 
     @media (min-width: 768px) {
-      .products { grid-template-columns: repeat(2, 1fr); gap: 2rem; }
+      .products {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 2rem;
+      }
     }
 
     .product {
@@ -162,6 +187,11 @@
       padding-bottom: 2rem;
     }
 
+    @media (min-width: 768px) {
+      .product { box-shadow: 0 8px 24px rgba(0,0,0,0.05); }
+      .product:hover { transform: translateY(-4px); }
+    }
+
     .product img {
       width: 100%;
       height: auto;
@@ -171,7 +201,9 @@
       object-fit: contain;
     }
 
-    .product-content { padding: 2rem 2rem 2.4rem; }
+    .product-content {
+      padding: 2rem 2rem 2.4rem;
+    }
 
     /* NASZ CEL */
     .about {
@@ -187,13 +219,20 @@
       line-height: 1.75;
     }
 
+    @media (min-width: 768px) {
+      .about-content { font-size: 1.15rem; }
+    }
+
     .about-content h3 {
       font-size: 1.7rem;
       margin-bottom: 1rem;
       font-weight: 700;
     }
 
-    /* STOPKA */
+    @media (min-width: 768px) {
+      .about-content h3 { font-size: 2rem; }
+    }
+
     footer {
       background: #fff;
       text-align: center;
@@ -272,13 +311,13 @@
       padding: 1rem 1.1rem;
       border-radius: .7rem;
       font-size: .85rem;
+      z-index: 9999;
       max-height: 260px;
       overflow: auto;
       max-width: 300px;
     }
   </style>
 </head>
-
 <body>
 
 <main>
@@ -300,20 +339,20 @@
     </p>
 
     <div class="features">
-      <div class="feature"><span>📦</span><div><strong>Kilkanaście elementów</strong> prostych w montażu – bez kleju</div></div>
-      <div class="feature"><span>📖</span><div><strong>Książeczka tematyczna</strong> pełna ciekawostek</div></div>
-      <div class="feature"><span>🛠️</span><div><strong>Instrukcja krok po kroku</strong> z obrazkami</div></div>
+      <div class="feature"><span>📦</span><div><strong>Kilkanaście elementów</strong> prostych w montażu – składanie bez kleju</div></div>
+      <div class="feature"><span>📖</span><div><strong>Książeczka tematyczna</strong> z ciekawostkami i prostymi wyjaśnieniami</div></div>
+      <div class="feature"><span>🛠️</span><div><strong>Instrukcja krok po kroku</strong> z obrazkami i jasnym opisem</div></div>
     </div>
   </section>
 
   <!-- JAK TO DZIAŁA -->
-  <section>
+  <section id="jak-to-dziala">
     <h2 class="section-title">Jak to działa</h2>
 
     <div class="columns-3 container">
-      <div class="card"><h3>Dotyk i doświadczenie</h3><p>Dziecko buduje i od razu widzi efekt.</p></div>
-      <div class="card"><h3>Prosta nauka</h3><p>Mechanizmy przedstawione przez zabawę.</p></div>
-      <div class="card"><h3>Naturalne materiały</h3><p>Sklejka zamiast plastiku.</p></div>
+      <div class="card"><h3>Dotyk i doświadczenie</h3><p>Dziecko buduje i widzi efekt.</p></div>
+      <div class="card"><h3>Prosta nauka</h3><p>Zasada mechanizmu przez zabawę.</p></div>
+      <div class="card"><h3>Naturalne materiały</h3><p>Tylko sklejka i wyobraźnia.</p></div>
     </div>
   </section>
 
@@ -337,7 +376,7 @@
         <img src="swinka.png" loading="lazy" alt="Skarbonka DIY">
         <div class="product-content">
           <h3>Skarbonka z zamkiem</h3>
-          <p>Poznaj zasadę działania klucza i zamka.</p>
+          <p>Poznaj, jak działa mechanizm klucza i zamka.</p>
           <button class="cta open-modal">Zamów teraz</button>
         </div>
       </div>
@@ -349,7 +388,7 @@
   <section class="about">
     <div class="about-content">
       <h3>Nasz cel</h3>
-      <p>Wierzymy, że nauka jest prosta, jeśli można ją zbudować własnymi rękami.</p>
+      <p>Wierzymy, że nauka jest prosta, jeśli można jej dotknąć i ją zbudować.</p>
       <p>Każdy zestaw to zaproszenie do wspólnego eksperymentowania i zabawy.</p>
     </div>
   </section>
@@ -394,6 +433,18 @@
 
 <script>
   document.getElementById('year').textContent = new Date().getFullYear();
+
+  /* Ultra-light observer */
+  const obs = new IntersectionObserver(entries => {
+    entries.forEach(entry => {
+      if (entry.isIntersecting) {
+        entry.target.classList.add("visible");
+        obs.unobserve(entry.target);
+      }
+    });
+  }, { threshold: 0.2 });
+
+  document.querySelectorAll("section").forEach(sec => obs.observe(sec));
 
   /* Modal + click tracking */
   const modalBackdrop = document.getElementById('modal-backdrop');
