--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
 
     <!-- CO TO JEST -->
     <section>
-      <h2 class="section-title">Co то jest Wombie Wonder Box?</h2>
+      <h2 class="section-title">Co to jest Wombie Wonder Box?</h2>
       <p class="section-sub">
         Edukacyjne zestawy do samodzielnego składania, które pokazują dzieciom,
         <strong>jak działa świat</strong> – prosto, zrozumiale i własnymi rękami.
